bk_ida/gccida/c2/initial_reg_note_copy
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/initial_reg_note_copy/src/unroll.c:2175:19: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v2 = rtx_alloc( ( rtx_code)*( _WORD *)notes); 
                  ^~~~~~~~
                  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/initial_reg_note_copy/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/initial_reg_note_copy/src/unroll.c:2175:28: error: invalid operands to binary expression ('int (rtx, enum rtx_code)' (aka 'int (struct rtx_def *, enum rtx_code)') and 'uint16 *' (aka 'unsigned short *'))
v2 = rtx_alloc( ( rtx_code)*( _WORD *)notes); 
                ~~~~~~~~~~~^~~~~~~~~~~~~~~~
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/initial_reg_note_copy/src/obj/unroll.o] Error 1
